k8s-manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: namespace-songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: krstevskidarko/songs-library-backend:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: app-secret

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-db
  namespace: namespace-songs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kiii-db
  template:
    metadata:
      labels:
        app: kiii-db
    spec:
      containers:
        - name: kiii-db
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: db-data
          emptyDir: {}
