k8s-manifests/statefulset.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kiii-db
  namespace: namespace-songs
spec:
  serviceName: kiii-db
  replicas: 1
  selector:
    matchLabels:
      app: kiii-db
  template:
    metadata:
      labels:
        app: kiii-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: pgdata
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
