k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: songs-service
  namespace: namespace-songs
spec:
  type: NodePort
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001

---

apiVersion: v1
kind: Service
metadata:
  name: kiii-db
  namespace: namespace-songs
spec:
  selector:
    app: kiii-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
